After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 585196 - Work around a Clutter crash when there is no root pixmap
Work around a Clutter crash when there is no root pixmap
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2009-06-08 21:10 UTC by Owen Taylor
Modified: 2009-06-11 19:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Work around a Clutter crash when there is no root pixmap (2.79 KB, patch)
2009-06-08 21:10 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2009-06-08 21:10:08 UTC
When there is no root pixmap, the result will be a CoglMaterial
with a layer with no texture, and that causes a crash.

Work around this by supressing painting the root pixmap actor
when there is no root pixmap.
Comment 1 Owen Taylor 2009-06-08 21:10:11 UTC
Created attachment 136172 [details] [review]
Work around a Clutter crash when there is no root pixmap
Comment 2 Sander Dijkhuis 2009-06-08 21:49:35 UTC
The patch looks good to me.
Comment 3 Owen Taylor 2009-06-11 19:06:17 UTC
Pushed. Thanks for the review.